--- a/css/beta.css
+++ b/css/beta.css
@@ -1,10 +1,13 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata);
+@font-face {
+  font-family: samaritan;
+  src: url(fonts/magdacleanmono-bold.ttf);
+}
 html {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
   position: relative;
-  font-family: 'Inconsolata';
+  font-family: 'samaritan';
   background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(127, 127, 127, 1) 100%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 0.56)), color-stop(100%, rgba(127, 127, 127, 1)));
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(127, 127, 127, 1) 100%);
